Animal card title overflow fix

--- a/src/Components/AnimalCard/index.css
+++ b/src/Components/AnimalCard/index.css
@@ -14,6 +14,12 @@
     transition: margin-right 0.3s;
 }
 
+.card-title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 .card-title a {
     color: #333;
     text-decoration: none;
